[tool.poetry]
name = "pysqlx-engine"

version = "0.1.23"
description = "Python Async SQL Engines"
authors = ["Carlos Rian <crian.rian@gmail.com>"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/carlos-rian/pysqlx-engine"
homepage = "https://carlos-rian.github.io/pysqlx-engine"
documentation = "https://carlos-rian.github.io/pysqlx-engine"
keywords = ["async", "database", "sql", "engine", "fastapi"]

packages = [
    { include = "pysqlx_engine "},
]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"

mkdocs-material = "^9.5.40"
mkdocs-video = "^1.3.0"
markdown-include = "^0.8.0"
mkdocs-material-extensions = "^1.3.1"
mkdocs-glightbox = "^0.4.0"
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "mkdocs serve"
